--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
     
     
     <!--Footer-->
-    <footer>Footer</footer>
+    <footer>
+      <ul>
+        <li><a href="https://en-gb.facebook.com/login/web/" target="_blank" rel="noopener" 
+        aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+      </ul>
+    </footer>
+    <!--Font awesome kit-->
+    <script src="https://kit.fontawesome.com/f6db590005.js" crossorigin="anonymous"></script>
   </body>
 </html>
