--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h1 id="logo"> Love Running</h1>
        </a>
        <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label">X</label>
+        <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
        <nav>
         <ul id="menu">
            <li><a href="" class="active">Home</a></li>
@@ -58,9 +58,26 @@
     <!--Footer-->
     <footer>
       <ul>
-        <li><a href="https://en-gb.facebook.com/login/web/" target="_blank" rel="noopener" 
-        aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
-      </ul>
+        <li>
+          <a href="https://en-gb.facebook.com/login/web/" target="_blank" rel="noopener" 
+              aria-label="Visit our Facebook page (opens in a new tab)">
+              <i class="fa-brands fa-facebook"></i></a>
+      </li>
+        <li>
+          <a href="https://www.instagram.com/" target="_blank" rel="noopener" 
+              aria-label="Visit our Instagram (opens in a new tab)">
+             <i class="fa-brands fa-square-instagram"></i></a>
+        </li>
+        <li><a href="https://x.com/" target="_blank" rel="noopener" 
+              aria-label="Visit our Twitter (opens in a new tab)">
+              <i class="fa-brands fa-square-x-twitter"></i></a>
+          </li>
+            <li>
+              <a href="https://www.youtube.com/" target="_blank" rel="noopener" 
+                 aria-label="Visit our Youtube (opens in a new tab)">
+                <i class="fa-brands fa-square-youtube"></i></a>
+              </li>
+          </ul>
     </footer>
     <!--Font awesome kit-->
     <script src="https://kit.fontawesome.com/f6db590005.js" crossorigin="anonymous"></script>
