--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     
     <!--Footer-->
     <footer>
-      <ul>
+      <ul id="social-networks">
         <li>
           <a href="https://en-gb.facebook.com/login/web/" target="_blank" rel="noopener" 
               aria-label="Visit our Facebook page (opens in a new tab)">
