Fixed error with email section of form

--- a/signup.html
+++ b/signup.html
@@ -69,7 +69,7 @@
           <input class="text-input" type="text" id="last-name" required />
           <br />
           <label for="email-address">Email Address</label>
-          <input class="text-input" type="email id=email-address" required />
+          <input class="text-input" type="email" id="email-address" required />
           <br />
           <div class="radio-buttons">
             <div>
