--- a/signup.html
+++ b/signup.html
@@ -46,9 +46,9 @@
       ></label>
       <nav>
         <ul id="menu">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="signup.html" class="active">Sign Up</a></li>
+          <li><a href="index.html" target="_blank">Home</a></li>
+          <li><a href="gallery.html" target="_blank">Gallery</a></li>
+          <li><a href="signup.html" target="_blank" class="active">Sign Up</a></li>
         </ul>
       </nav>
     </header>
