--- a/gallery.html
+++ b/gallery.html
@@ -57,10 +57,7 @@
     <main>
       <section id="gallery">
         <div id="photos">
-          <img
-            src="assets\images\athletes.webp"
-            alt="Two athletes running together"
-          />
+          <img src="assets/images/athletes.webp" alt="Two athletes running together">
           <img
             src="assets/images/girls.webp"
             alt="Three girls at charity paint running festival"
