--- a/signup.html
+++ b/signup.html
@@ -1,38 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=#, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=#, initial-scale=1.0">
     <!--Meta tags for search engines-->
     <meta
       name="description"
-      content="Love running, Club for runners in Dublin Ireland,Urban running, trail running"
-    />
+      content="Love running, Club for runners in Dublin Ireland,Urban running, trail running">
     <meta
       name="keywords"
-      content="love running,run, running club, runners, Ireland, Dublin, Sport, exercise"
-    />
+      content="love running,run, running club, runners, Ireland, Dublin, Sport, exercise">
     <!--Title-->
     <title>Love Running</title>
     <!--Favicon-->
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="assets/favicon/apple-touch-icon.png"
-    />
+      href="assets/favicon/apple-touch-icon.png">
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="assets/favicon/favicon-32x32.png"
-    />
+      href="assets/favicon/favicon-32x32.png">
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="assets/favicon/favicon-16x16.png"
-    />
-    <link rel="stylesheet" href="assets/css/style.css" />
+      href="assets/favicon/favicon-16x16.png">
+    <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
     <!--Header-->
@@ -40,7 +35,7 @@
       <a href="index.html">
         <h1 id="logo">Love Running</h1>
       </a>
-      <input type="checkbox" id="nav-toggle" name="nav-toggle" />
+      <input type="checkbox" id="nav-toggle" name="nav-toggle">
       <label for="nav-toggle" class="nav-toggle-label"
         ><i class="fa-solid fa-bars"></i
       ></label>
@@ -73,7 +68,7 @@
           <br>
           <div class="radio-buttons">
             <div>
-              <label for="radio">Road</label>
+              <label for="road">Road</label>
               <input type="radio" name="running-preference" id="road" required checked>
             </div>
             <div>
