--- a/index.html
+++ b/index.html
@@ -6,33 +6,28 @@
     <!--Meta tags for search engines-->
     <meta
       name="description"
-      content="Love running, Club for runners in Dublin Ireland,Urban running, trail running"
-    />
+      content="Love running, Club for runners in Dublin Ireland,Urban running, trail running">
     <meta
       name="keywords"
-      content="love running,run, running club, runners, Ireland, Dublin, Sport, exercise"
-    />
+      content="love running,run, running club, runners, Ireland, Dublin, Sport, exercise">
     <!--Title-->
     <title>Love Running</title>
     <!--Favicon-->
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="assets/favicon/apple-touch-icon.png"
-    />
+      href="assets/favicon/apple-touch-icon.png">
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="assets/favicon/favicon-32x32.png"
-    />
+      href="assets/favicon/favicon-32x32.png">
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="assets/favicon/favicon-16x16.png"
-    />
-    <link rel="stylesheet" href="assets/css/style.css" />
+      href="assets/favicon/favicon-16x16.png">
+    <link rel="stylesheet" href="assets/css/style.css" >
   </head>
   <body>
     <!--Header-->
@@ -40,7 +35,7 @@
       <a href="index.html">
         <h1 id="logo">Love Running</h1>
       </a>
-      <input type="checkbox" id="nav-toggle" name="nav-toggle" />
+      <input type="checkbox" id="nav-toggle" name="nav-toggle">
       <label for="nav-toggle" class="nav-toggle-label"
         ><i class="fa-solid fa-bars"></i
       ></label>
@@ -67,7 +62,7 @@
           <div id="benefits-physical">
             <div>
               <h3>Feel Healthy <i class="fa-solid fa-heart-pulse"></i></h3>
-              <hr />
+              <hr>
               <p>
                 Since it improves aerobic fitness, running is a great way to
                 help improve your cardiovascular health. Plus, it burns calories
@@ -76,7 +71,7 @@
             </div>
             <div>
               <h3>FEEL STRONG <i class="fa-solid fa-dumbbell"></i></h3>
-              <hr />
+              <hr>
               <p>
                 Running strengthens your heart by pumping blood more effectively
                 through your body.
@@ -86,7 +81,7 @@
           <div id="benefits-mental">
             <div>
               <h3>FEEL FREE <i class="fa-brands fa-fly"></i></h3>
-              <hr />
+              <hr>
               <p>
                 Physical exercise, running included, is known to release
                 endorphins in the brain. Endorphins make you more energetic,
@@ -95,7 +90,7 @@
             </div>
             <div>
               <h3>GET SOCIAL <i class="fa-solid fa-globe"></i></h3>
-              <hr />
+              <hr>
               <p>
                 When we run with others, we can run farther and faster more
                 easily. Social running can pull you out of a running funk or low
