--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=#, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=#, initial-scale=1.0">
     <!--Meta tags for search engines-->
     <meta
       name="description"
